# python-benedict

./: .deepsource.toml  .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE.txt  MANIFEST.in  README.md  README.rst  SECURITY.md  pyproject.toml  requirements-ci-release.txt  requirements-ci-test.txt  requirements-dev.txt  requirements-release.txt  requirements-test.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: codeql-analysis.yml  create-release.yml  openssf-scorecard.yml  pre-commit-autoupdate.yml  pythonpackage.yml  scorecard.yml  test-package.yml
benedict/: __init__.py  dicts.py  exceptions.py  extras.py  ipy_completer.py  metadata.py  parser.py
benedict/__future__/: __init__.py
benedict/core/: __init__.py  clean.py  clone.py  dump.py  filter.py  find.py  flatten.py  groupby.py  invert.py  items_sorted.py  keylists.py  keypaths.py  match.py  merge.py  move.py  nest.py  remove.py  rename.py  search.py  standardize.py  subset.py  swap.py  traverse.py  unflatten.py  unique.py
benedict/crypto/: cyphers.py
benedict/dicts/: __init__.py  io.py  keylist.py  keypath.py  parse.py  utility.py
benedict/dicts/base/: __init__.py  base_dict.py
benedict/dicts/io/: __init__.py  io_dict.py  io_util.py
benedict/dicts/keyattr/: __init__.py  keyattr_dict.py
benedict/dicts/keylist/: __init__.py  keylist_dict.py  keylist_util.py
benedict/dicts/keypath/: __init__.py  keypath_dict.py  keypath_util.py
benedict/dicts/parse/: __init__.py  parse_dict.py  parse_util.py
benedict/serializers/: __init__.py  abstract.py  base64.py  cli.py  csv.py  html.py  ini.py  json.py  pickle.py  plist.py  query_string.py  toml.py  xls.py  xml.py  yaml.py
benedict/utils/: __init__.py  dict_util.py  io_util.py  keylist_util.py  keypath_util.py  parse_util.py  pydantic_util.py  schema_util.py  type_util.py  utility_util.py
tests/: __init__.py  aws.py  test_benedict.py  test_dict_util.py  test_dicts.py  test_dicts_benedict.py  test_dicts_keypath_dict.py  test_dicts_parse_dict.py  test_io_dict.py  test_io_util.py  test_keylist_util.py  test_keypath_dict.py  test_keypath_util.py  test_parse_dict.py  test_parser.py  test_stackoverflow_questions.py  test_utility_dict.py
tests/core/: test_clean.py  test_clone.py  test_dump.py  test_filter.py  test_find.py  test_flatten.py  test_groupby.py  test_invert.py  test_items_sorted.py  test_keylists.py  test_keypaths.py  test_match.py  test_merge.py  test_move.py  test_nest.py  test_remove.py  test_rename.py  test_search.py  test_standardize.py  test_subset.py  test_swap.py  test_traverse.py  test_unflatten.py  test_unique.py
tests/dicts/: test_assign.py  test_benedict.py  test_benedict_casting.py  test_benedict_freeze.py  test_benedict_keyattr.py  test_benedict_subclass.py  test_benedict_wildcard.py
tests/dicts/base/: test_base_dict.py  test_base_dict_freeze.py
tests/dicts/io/: test_io_dict.py  test_io_dict_base64.py  test_io_dict_cli.py  test_io_dict_csv.py  test_io_dict_html.py  test_io_dict_ini.py  test_io_dict_json.py  test_io_dict_pickle.py  test_io_dict_plist.py  test_io_dict_query_string.py  test_io_dict_schema.py  test_io_dict_toml.py  test_io_dict_validate.py  test_io_dict_xls.py  test_io_dict_xml.py  test_io_dict_yaml.py  test_io_util.py  test_pickle.py  test_schema.py
tests/dicts/io/input/: invalid-content.html  invalid-content.ini  valid-content.csv  valid-content.html  valid-content.ini  valid-content.pickle  valid-content.plist  valid-content.xlsm  valid-content.xlsx  valid-content.xlt  valid-content.yml
tests/dicts/keylist/: test_keylist_dict.py  test_keylist_util.py
tests/dicts/keypath/: test_keypath_dict.py  test_keypath_dict_list_indexes.py  test_keypath_dict_list_wildcard.py  test_keypath_util.py
tests/dicts/parse/: test_parse_dict.py  test_parse_util.py
tests/github/: test_issue_0011.py  test_issue_0016.py  test_issue_0020.py  test_issue_0025.py  test_issue_0027.py  test_issue_0032.py  test_issue_0034.py  test_issue_0035.py  test_issue_0038.py  test_issue_0039.py  test_issue_0043.py  test_issue_0046.py  test_issue_0048.py  test_issue_0053.py  test_issue_0057.py  test_issue_0059.py  test_issue_0066.py  test_issue_0088.py  test_issue_0089.py  test_issue_0102.py  test_issue_0109.py  test_issue_0110.py  test_issue_0144.json  test_issue_0144.py  test_issue_0198.py  test_issue_0226.py  test_issue_0284.py  test_issue_0287.py  test_issue_0294.py  test_issue_0314.py  test_issue_0333.py  test_issue_0334.py  test_issue_0355.py  test_issue_0355.xlsx  test_issue_0367.py  test_issue_0432.py  test_issue_0471.py
tests/input/: valid-content.base64  valid-content.json  valid-content.qs  valid-content.toml  valid-content.xml
tests/serializers/: test_abstract_serializer.py  test_base64_serializer.py  test_csv_serializer.py  test_ini_serializer.py  test_json_serializer.py  test_pickle_serializer.py  test_plist_serializer.py  test_query_string_serializer.py  test_toml_serializer.py  test_xls_serializer.py  test_xml_serializer.py  test_yaml_serializer.py
tests/stackoverflow/: test_question_20528081.py  test_question_58692636.py  test_question_58827592.py  test_question_59176476.py  test_question_60066331.py  test_question_60072709.py  test_question_60276839.py
tests/utils/: test_pydantic_util.py  test_type_util.py
