[metadata]
name = python-benedict
version = attr: benedict.metadata.__version__
author = Fabio Caccamo
author_email = fabio.caccamo@gmail.com
maintainer = Fabio Caccamo
maintainer_email = fabio.caccamo@gmail.com
description = python-benedict is a dict subclass with keylist/keypath support, normalized I/O operations (base64, csv, ini, json, pickle, plist, query-string, toml, xls, xml, yaml) and many utilities... for humans, obviously.
keywords =
    python
    dictionary
    dictionaries
    dict
    benedict
    subclass
    extended
    keylist
    keypath
    utility
    io
    data
    file
    url
    read
    write
    parse
    configparser
    config
    cfg
    pickle
    plist
    base64
    csv
    ini
    json
    query-string
    toml
    xml
    yaml
    clean
    clone
    deepclone
    deepupdate
    dump
    filter
    flatten
    groupby
    invert
    merge
    move
    nest
    remove
    rename
    search
    standardize
    subset
    swap
    traverse
    unflatten
    unique
url = https://github.com/fabiocaccamo/%(name)s
download_url = https://github.com/fabiocaccamo/%(name)s/releases
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: MacOS X
    Environment :: Other Environment
    Environment :: Web Environment
    Environment :: Win32 (MS Windows)
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Education :: Testing
    Topic :: Software Development :: Build Tools
    Topic :: System :: Filesystems
    Topic :: Text Processing :: Markup :: XML
    Topic :: Utilities
project_urls =
    Documentation = https://github.com/fabiocaccamo/%(name)s#readme
    Issues = https://github.com/fabiocaccamo/%(name)s/issues
    Funding = https://github.com/sponsors/fabiocaccamo/
    Twitter = https://twitter.com/fabiocaccamo

[options]
packages = find:
install_requires =
    boto3 >= 1.24.89, < 2.0.0
    ftfy >= 6.0.0, < 7.0.0
    mailchecker >= 4.1.0, < 6.0.0
    openpyxl >= 3.0.0, < 4.0.0
    phonenumbers >= 8.12.0, < 9.0.0
    python-dateutil >= 2.8.0, < 3.0.0
    python-fsutil >= 0.9.3, < 1.0.0
    python-slugify >= 6.0.1, < 8.0.0
    pyyaml >= 6.0, < 7.0
    requests >= 2.26.0, < 3.0.0
    toml >= 0.10.2, < 1.0.0
    xlrd >= 2.0.0, < 3.0.0
    xmltodict >= 0.12.0, < 1.0.0
include_package_data = True

[options.packages.find]
exclude =
    docs*
    images*
    scripts*
    tests*

[flake8]
ignore = E501, W503
max-line-length = 89
max-complexity = 10
select = B,C,E,F,W,T4,B9
